--- a/op-web/index.html
+++ b/op-web/index.html
@@ -110,6 +110,7 @@
           <select id="game-format-select" name="game-format" class="form-control">
             <option value="5game">5G</option>
             <option value="4game1set">4G1set</option>
+            <option value="4game1set_ntb">4G1set NoTB</option>
             <option value="6game1set">6G1set</option>
             <option value="6game1set_ntb">6G1set NoTB</option>
             <option value="8game1set">8G-Pro</option>
