20枠に増加対応版

--- a/op-web/index.html
+++ b/op-web/index.html
@@ -63,6 +63,10 @@
             <span id="court-count-display" class="court-count-display">12</span>
             <button id="increase-courts-btn">+</button>
           </div>
+          <div class="slot-count-controls" style="display:flex; align-items:center; gap:6px; margin-right:8px;">
+            <label for="slot-count-select">枠数:</label>
+            <select id="slot-count-select" title="各コートに表示する試合枠数"></select>
+          </div>
           <div class="export-controls" style="margin-right:8px;">
             <select id="board-export-type" style="margin-right:4px;">
               <option value="csv">CSV形式</option>
