検索バー固定とコートヘッダー固定をCSSで安全に修正済み

--- a/op-web/index.html
+++ b/op-web/index.html
@@ -11,7 +11,7 @@
   <style>
     .cloud-controls { display:flex; gap:8px; align-items:center; margin-left:8px; }
     /* viewer search */
-    .viewer-search { display:flex; gap:6px; align-items:center; margin: 6px 8px; }
+    .viewer-search { display:flex; gap:6px; align-items:center; margin: 0; padding: 6px 8px; position: sticky; top: 0; z-index: 1000; background: #fff; box-shadow: 0 1px 4px #0001; }
     .viewer-search input { padding:6px 8px; border:1px solid #ccc; border-radius:4px; min-width: 180px; }
     .viewer-search button { padding:6px 10px; }
     .search-hit { outline: 3px solid #ffcc00; transition: outline-color 1s ease; }
